tests/NormalTests/paczka1/small_fuzzy/91554536.err
Error in line 8: S 0 S703 117,8
Error in line 2: 95QcYq S20 52,9
Error in line 12: pkIfS S849 -3,5
Error in line 6: S20 S703 29,6
